# otto-rec-sys

./: README.md  pyproject.toml  requirements.txt
docs/: proposal.html  proposal.md
notebooks/: otto-recsys-covisit-matrix-generation.ipynb  otto-recsys-full-pipeline.ipynb  otto-recsys-gnn-embedding-generation.ipynb
src/candidate_generation/: covisit_matrix.py  gnn.py  loader.py  utils.py
src/core/: config.py  utils.py
src/pipeline/: preprocess.py  training.py  validation.py
src/reranker/: training.py
stubs/cudf/: __init__.pyi
stubs/cudf/api/: __init__.pyi
stubs/cudf/core/: dataframe.pyi
