[project]
name = "otto-rec-sys"
version = "0.1.0"
description = "Local dev setup for Otto Rec sys"
authors = [
    { name = "Triet", email = "you@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "lightgbm>=4.6.0",
    "mypy>=1.19.1",
    "numpy<2.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
]

# -------------------
# Mypy configuration
# -------------------
[tool.mypy]
mypy_path = "./stubs"        # nơi chứa stub (vd: stubs/cudf/)
ignore_missing_imports = true
python_version = "3.13"
warn_unused_ignores = true
strict_optional = true

# -------------------
# (Tùy chọn) Black formatting
# -------------------
[tool.black]
line-length = 88
target-version = ['py313']

# -------------------
# (Tùy chọn) Ruff linter
# -------------------
[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]

# -------------------
# (Tùy chọn) isort
# -------------------
[tool.isort]
profile = "black"
